--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -3,7 +3,59 @@
   margin-right: 303px;
 }
 
-@media (max-width: 583px) {
+@media only screen and (max-width: 320px){
+    span{
+      top: -10px;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 30px;
+      color: #FFFFFF;
+    }
+
+    .login{
+      height: 24px;
+      margin-top: 13px;
+      margin: 20px;
+      margin-left: 7px;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 13px;
+      line-height: 24px;
+      color: rgba(255, 255, 255, 0.5);
+      text-decoration: none;
+    }
+
+    .register{
+      height: 24px;
+      margin-top: 13px;
+      margin: 20px;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 13px;
+      line-height: 24px;
+      color: rgba(255, 255, 255, 0.5);
+      text-decoration: none;
+    }
+
+    .browsecamps{
+      height: 24px;
+      margin-top: 13px;
+      margin: 20px;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 13px;
+      line-height: 24px;
+      color: rgba(255, 255, 255, 0.5);
+      text-decoration: none;
+    }
+}
+
+@media only screen and (min-device-width: 321px) and (max-device-width: 583px) {
   .navbar{
     display: flex;
     margin-right: 50px;
@@ -26,6 +78,7 @@
 }
 
 @media only screen and (min-device-width: 584px) and (max-device-width: 800px){
+
   .navbar{
     display: flex;
     margin-right: 80px;
